2011-03-05  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: adding null check to prevent inspector tests from failing.

        * inspector/front-end/TextViewer.js:
        (WebInspector.TextEditorGutterChunk.prototype.get offsetTop):
        (WebInspector.TextEditorMainChunk.prototype.get offsetTop):

2011-03-05  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: chromium rebaseline, flaky test fix.

        * inspector/front-end/BreakpointManager.js:
        (WebInspector.DOMBreakpointView.prototype.populateStatusMessageElement.decorateNode):
        (WebInspector.DOMBreakpointView.prototype.populateStatusMessageElement):
        (WebInspector.DOMBreakpointView.prototype._format.formatters.s):
        (WebInspector.DOMBreakpointView.prototype._format.append):
        (WebInspector.DOMBreakpointView.prototype._format):

2011-03-04  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: [chromium] pause when script is running is broken.
        https://bugs.webkit.org/show_bug.cgi?id=55762

        * inspector/CodeGeneratorInspector.pm:

2011-03-05  Adam Barth  <abarth@webkit.org>

        Reviewed by Dimitri Glazkov.

        Add Derived Sources to WebCore GYP build
        https://bugs.webkit.org/show_bug.cgi?id=55813

        Adding the derived source action to the GYP file required tweaking
        DerivedSources.make.  I'm not sure how DerivedSources.make worked
        before beause these paths were incorrectly based.

        * DerivedSources.make:
        * gyp/generate-derived-sources.sh: Added.
        * gyp/WebCore.gyp:

2011-03-04  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: fix layout tests flakiness.
        https://bugs.webkit.org/show_bug.cgi?id=55816

        - Order of issuing of evaluateForTestInFrontend was not guaranteed on the backend side (InspectorAgent side)